--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -5,3 +5,4 @@ $dark-shade-25:    rgba(31, 32, 65, 0.25);
 $dark-shade-5:     rgba(31, 32, 65, 0.05);
 $purple:           #BC9CFF;
 $green:            #6FCF97;
+$gradient:           linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
