--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'fonts.scss';
 @import '../blocks/checkbox/checkbox.scss';
 @import '../blocks/radio/radio.scss';
+@import '../blocks/toggle/toggle.scss';
 
 
 body {
