--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,7 @@ html
     include blocks/checkbox/checkbox.pug
     include blocks/radio/radio.pug
     include blocks/toggle/toggle.pug
+    include blocks/long-button/long-button.pug
 
     h1
       | This one is the sub-section or widget title
@@ -28,3 +29,14 @@ html
     br
     +toggle('Предлагать новости', true)
     +toggle('Не нужны новости')
+
+    .button Click me
+    .button.button--disabled Click me
+
+    .rounded-button Click me
+    .rounded-button.rounded-button--disabled Click me
+
+    .simple-button Click me
+    .simple-button.simple-button--disabled Click me
+
+    +long-button('Перейти к оплате')
