--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import '../blocks/rounded-button/rounded-button.scss';
 @import '../blocks/simple-button/simple-button.scss';
 @import '../blocks/long-button/long-button.scss';
+@import '../blocks/like/like.scss';
 
 
 body {
