--- a/src/index.pug
+++ b/src/index.pug
@@ -49,3 +49,6 @@ html
     +like(1000)
     +like(33, true)
     +like(222)
+
+    input.text-field(type="text" value="Email")
+    input.text-field(type="password" value="Password")
