--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import '../blocks/simple-button/simple-button.scss';
 @import '../blocks/long-button/long-button.scss';
 @import '../blocks/like/like.scss';
+@import '../blocks/text-field/text-field.scss';
 
 
 body {
