--- a/src/index.pug
+++ b/src/index.pug
@@ -50,5 +50,6 @@ html
     +like(33, true)
     +like(222)
 
-    input.text-field(type="text" value="Email")
-    input.text-field(type="password" value="Password")
+    .content
+      input.text-field#field(type="text" value="Email")
+      input.text-field(type="password" value="Password")
