--- a/src/blocks/text-field/text-field.scss
+++ b/src/blocks/text-field/text-field.scss
@@ -7,6 +7,7 @@
     padding-left: 15px;
     padding-top: 13px;
     padding-bottom: 13px;
+    width: 100%;
 
     &:hover, &:focus {
         border-color: $dark-shade-50;
