--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -4,17 +4,19 @@
     color: $white;
     background-image: $gradient;
     border-radius: 22px;
-    padding: 14px 98px;
+    padding: 12px 98px;
     text-transform: uppercase;
     font-size: .75rem;
     font-weight: bold;
     cursor: pointer;
     user-select: none;
+    width: 100%;
+    text-align: center;
 
     &__icon {
         position: absolute;
-        top: 11px;
-        right: 15px;
+        top: 10px;
+        right: 10px;
         font-family: 'Material Icons';
         font-weight: normal;
         font-style: normal;
