--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,19 @@
 @import '../blocks/long-button/long-button.scss';
 @import '../blocks/like/like.scss';
 @import '../blocks/text-field/text-field.scss';
+@import '../blocks/card-canvas/card-canvas.scss';
+@import '../blocks/enter-card/enter-card.scss';
+@import '../blocks/rating/rating.scss';
 
+:root {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
 
 body {
     color: rgba(31, 32, 65, 0.75);
@@ -17,6 +29,8 @@ body {
     margin-top: 3em;
     font-size: .875rem;
     line-height: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 .content {
