--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -6,6 +6,18 @@
     cursor: pointer;
     user-select: none;
 
+    &--bold {
+        font-family: 'Montserrat Bold';
+    }
+
+    &__description {
+        font-family: 'Montserrat';
+        font-size: .75rem;
+        line-height: .875em;
+        padding-top: .65em;
+        color: $dark-shade-50;
+    }
+
     &__input {
         width: 0;
         height: 0;
@@ -16,8 +28,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 1.25em;
-        height: 1.25em;
+        width: 1.4em;
+        height: 1.4em;
         border: 1px solid $dark-shade-25;
         border-radius: .25em;
     }
@@ -26,8 +38,8 @@
         content: '';
         display: none;
         position: absolute;
-        top: .1875em;
-        left: .375em;
+        top: .36em;
+        left: .46em;
         width: .375em;
         height: .5em;
         border-width: 0 2px 2px 0;
