--- a/src/blocks/radio/radio.scss
+++ b/src/blocks/radio/radio.scss
@@ -14,8 +14,8 @@
 
     &__mark {
         position: absolute;
-        top: -1px;
-        left: 0;
+        top: .06em;
+        left: .125em;
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -26,8 +26,8 @@
         content: '';
         display: none;
         position: absolute;
-        top: 4px;
-        left: 4px;
+        top: .2em;
+        left: .2em;
         width: 12px;
         height: 12px;
         background-image: linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
