--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import '../blocks/rating/rating.scss';
 @import '../blocks/expander/expander.scss';
 @import '../blocks/bullet/bullet.scss';
+@import '../blocks/configuration-dropdown/configuration-dropdown.scss';
 
 :root {
     box-sizing: border-box;
