added comment block

--- a/src/index.pug
+++ b/src/index.pug
@@ -113,6 +113,23 @@ html
         .additions__title Удобство
         div Окно в каждой из спален
 
+      .comment
+        img.avatar(src="../img/ava.jpg")
+        div
+          .comment__author Мурад Сарафанов
+          .comment__date 5 дней назад
+        .comment__like
+          +like(12, true)
+        .comment__text
+          | Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. 
+          | И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто 
+          | не жаловался из соседей.
+        
+
+
+
+
+
       br
       br
       br
