--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -1,10 +1,10 @@
 .additions {
     position: relative;
-    line-height: 24px;
+    line-height: 1.716em;
     border-width: 0 0 1px 0;
     border-style: solid;
     border-color: $dark-shade-10;
-    padding: 20px 0 20px 58px;
+    padding: 1.43em 0 1.43em 4.14em;
 
 
     &__title {
@@ -14,11 +14,11 @@
     &::after {
         content: '\e420';
         position: absolute;
-        top: 24px;
+        top: .5em;
         left: 0;
         font-family: 'Material Icons';
-        font-size: 48px;
-        line-height: 40px;
+        font-size: 3.43em;
+        line-height: .85em;
         background: $gradient;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
