added new color and pagination

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -8,3 +8,4 @@ $purple:           #BC9CFF;
 $green:            #6FCF97;
 $white:            #FFFFFF;
 $gradient:         linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
+$light-gradient:   linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
