--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import '../blocks/additions/additions.scss';
 @import '../blocks/avatar/avatar.scss';
 @import '../blocks/comment/comment.scss';
+@import '../blocks/pagination/pagination.scss';
 
 :root {
     box-sizing: border-box;
