added subscription for text field

--- a/src/index.pug
+++ b/src/index.pug
@@ -135,8 +135,10 @@ html
         a.pagination__item(href="#") 15
         button.pagination__next
         .pagination__info 1 &ndash; 12 из 100+ вариантов аренды
-
-
+      
+      .subscription
+        .subscription__item
+        input.text-field(placeholder="Email")
       br
       br
       br
