--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import '../blocks/avatar/avatar.scss';
 @import '../blocks/comment/comment.scss';
 @import '../blocks/pagination/pagination.scss';
+@import '../blocks/subscription/subscription.scss';
 
 :root {
     box-sizing: border-box;
