--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -17,11 +17,20 @@
 }
 
 @font-face {
-  font-family: "Quicksand";
-  src: url("../fonts/quicksand/Quicksand-Bold.svg") format("svg"),
-    url("../fonts/quicksand/Quicksand-Bold.ttf") format("truetype"),
-    url("../fonts/quicksand/Quicksand-Bold.woff") format("woff");
+  font-family: "Quicksand Bold";
+  src: url("../fonts/quicksand-bold/Quicksand-Bold.svg") format("svg"),
+    url("../fonts/quicksand-bold/Quicksand-Bold.ttf") format("truetype"),
+    url("../fonts/quicksand-bold/Quicksand-Bold.woff") format("woff");
   font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Quicksand Regular";
+  src: url("../fonts/quicksand-regular/Quicksand-Regular.svg") format("svg"),
+    url("../fonts/quicksand-regular/Quicksand-Regular.ttf") format("truetype"),
+    url("../fonts/quicksand-regular/Quicksand-Regular.woff") format("woff");
+  font-weight: normal;
   font-style: normal;
 }
 
