added date dropdown

--- a/src/index.pug
+++ b/src/index.pug
@@ -139,6 +139,9 @@ html
       .subscription
         .subscription__item
         input.text-field(placeholder="Email")
+
+      include blocks/range-dates/range-dates.pug 
+      +range-dates()
       br
       br
       br
