--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,8 @@
 @import '../blocks/type/type.scss';
 @import '../blocks/color-types/color-types.scss';
 @import '../blocks/logo/logo.scss';
+@import 'datepicker/datepicker.scss';
+@import '../blocks/range-dates/range-dates.scss';
 
 :root {
     box-sizing: border-box;
