--- a/src/blocks/card-canvas/card-canvas.scss
+++ b/src/blocks/card-canvas/card-canvas.scss
@@ -1,10 +1,14 @@
 .card-canvas {
+    /*
     position: relative;
     top: -200px;
     left: 170px;
-    display: block;
-    padding: 40px 30px 32px 30px;
     width: 380px;
+    */
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 40px 30px 30px;
     background-color: $white;
     border-radius: 4px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
