--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,7 @@ html
     include blocks/like/like.pug
     include blocks/enter-card/enter-card.pug
     include blocks/rating/rating.pug
+    include blocks/configuration-dropdown/configuration-dropdown.pug
 
 
     h1
@@ -76,33 +77,7 @@ html
         li Нельзя с питомцами
         li Без вечеринок и мероприятий
         li Время прибытия &#8212; после 13:00, а выезд до 12:00
-      //+enter-card
-  
-
-      .configuration-dropdown
-        .configuration-dropdown__header#dropdown_header 2 спальни, 2 кровати...
-        .configuration-dropdown__content.configuration-dropdown__content--hide#dropdown_content
-          .configuration-dropdown__item#config_room 
-            .configuration-dropdown__option Спальни
-            .configuration-dropdown__controlls
-              .configuration-dropdown__button#room(data-id='room' data-type='dec') -
-              .configuration-dropdown__counter#room_field 0
-              .configuration-dropdown__button(data-id='room' data-type='inc') +
-          .configuration-dropdown__item#config_bad 
-            .configuration-dropdown__option Кровати
-            .configuration-dropdown__controlls
-              .configuration-dropdown__button#bad(data-id='bad' data-type='dec') -
-              .configuration-dropdown__counter#bad_field 3
-              .configuration-dropdown__button(data-id='bad' data-type='inc') +
-          .configuration-dropdown__item#config_badroom 
-            .configuration-dropdown__option Ванные комнаты
-            .configuration-dropdown__controlls
-              .configuration-dropdown__button#badroom(data-id='badroom' data-type='dec') -
-              .configuration-dropdown__counter#badroom_field 3
-              .configuration-dropdown__button(data-id='badroom' data-type='inc') +
-          .configuration-dropdown__footer
-            .simple-button.simple-button--disabled Очистить
-            .simple-button Применить
+        +enter-card
 
 
       .additions
@@ -142,6 +117,10 @@ html
 
       include blocks/range-dates/range-dates.pug 
       +range-dates()
+
+
+      include blocks/find-apartments-card/find-apartments-card.pug 
+      +apartments()
       br
       br
       br
