added register card and footer for cards

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,8 @@
 @import 'datepicker/datepicker.scss';
 @import '../blocks/range-dates/range-dates.scss';
 @import '../blocks/find-apartments-card/find-apartments-card.scss';
+@import '../blocks/register-card/register-card.scss';
+@import '../blocks/card-footer/card-footer.scss';
 
 :root {
     box-sizing: border-box;
