--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -7,5 +7,6 @@ $dark-shade-5:     rgba(31, 32, 65, 0.05);
 $purple:           #BC9CFF;
 $green:            #6FCF97;
 $white:            #FFFFFF;
+$black:            #000000;
 $gradient:         linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
 $light-gradient:   linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
