--- a/src/index.pug
+++ b/src/index.pug
@@ -74,10 +74,14 @@ html
           +checkbox('Шампунь')
       
       ul.bullet
-        li Нельзя с питомцами
-        li Без вечеринок и мероприятий
-        li Время прибытия &#8212; после 13:00, а выезд до 12:00
-        +enter-card
+        li 
+          span Нельзя с питомцами
+        li 
+          span Без вечеринок и мероприятий
+        li 
+          span Время прибытия &#8212; после 13:00, а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 а выезд до 12:00 
+      
+      +enter-card
 
 
       .additions
