--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -10,7 +10,7 @@
     & li {
         position: relative;
         padding-left: 19px;
-        margin-bottom: 14px;
+        padding-bottom: 14px;
 
         &::before {
             content: '';
