--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 @import '../blocks/invoice/invoice.scss';
 @import '../blocks/info/info.scss';
 @import '../blocks/gallery/gallery.scss';
+@import '../blocks/image-card/image-card.scss';
 
 :root {
     box-sizing: border-box;
@@ -59,12 +60,15 @@ body {
     margin: 0 auto;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
 h1 {
     font-family: 'Quicksand Bold', sans-serif;
     font-size: 1.5rem;
     line-height: 1.25em;
     color: #1F2041;
-    margin: 0;
 }
 
 h2 {
