--- a/src/blocks/image-card/image-card.pug
+++ b/src/blocks/image-card/image-card.pug
@@ -1,11 +1,12 @@
-mixin image-card(image, arrows = true, apartment, price, rating, comments)
+mixin image-card(image, arrows = true, apartment, lux = false, price, rating, comments)
     .image-card
         +gallery(image, arrows)
         .image-card__body
           .image-card__item.image-card__item--border
             span.image-card--bold № 
             h2= apartment 
-            span.image-card--lux  Люкс
+            if (lux)
+                span.image-card--lux  Люкс
           .image-card__item.image-card__item--right.image-card__item--border
             b #{price}&#8381; 
             span.image-card__s в сутки
