--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,25 @@ html
     include blocks/rating/rating.pug
     include blocks/configuration-dropdown/configuration-dropdown.pug
 
+    button.menu__menu-toggle
+    .menu_cont
+      .menu.menu--open
+        .menu__item.menu__item--current 
+          a(href="#") Home
+        .menu__item 
+          a(href="#") About Us
+        .menu__item.menu__submenu#services_menu Services
+          .submenu#services_submenu
+            .submenu__item 
+              a(href="#first") First
+            .submenu__item 
+              a(href="#second") Second
+        .menu__item 
+          a(href="#") Careers
+        .menu__item
+          a(href="#") News
+        .menu__item 
+          a(href="#") Documentation
 
     h1
       | This one is the sub-section or widget title
@@ -140,24 +159,7 @@ html
       +image-card("/img/apartments_2.png", true, 888, true, '9 990', 5, 999)
       br
 
-      .menu_cont
-        .menu
-          .menu__item.menu__item--current 
-            a(href="#") Home
-          .menu__item 
-            a(href="#") About Us
-          .menu__item.menu__submenu Services
-            .submenu
-              .submenu__item 
-                a(href="#") First
-              .submenu__item 
-                a(href="#") Second
-          .menu__item 
-            a(href="#") Careers
-          .menu__item
-            a(href="#") News
-          .menu__item 
-            a(href="#") Documentation
+      
       br
       br
       br
