--- a/src/index.pug
+++ b/src/index.pug
@@ -12,25 +12,8 @@ html
     include blocks/rating/rating.pug
     include blocks/configuration-dropdown/configuration-dropdown.pug
 
-    button.menu__menu-toggle
-    .menu_cont
-      .menu.menu--open
-        .menu__item.menu__item--current 
-          a(href="#") Home
-        .menu__item 
-          a(href="#") About Us
-        .menu__item.menu__submenu#services_menu Services
-          .submenu#services_submenu
-            .submenu__item 
-              a(href="#first") First
-            .submenu__item 
-              a(href="#second") Second
-        .menu__item 
-          a(href="#") Careers
-        .menu__item
-          a(href="#") News
-        .menu__item 
-          a(href="#") Documentation
+    include blocks/menu/menu.pug 
+    +menu()
 
     h1
       | This one is the sub-section or widget title
