added fontawesome, socials buttons and light footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -155,4 +155,12 @@ html
       br
       br
 
+      footer.light-footer
+        .site-logo
+        .light-footer__content
+          | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
+          | eget nullam pellentesque aliquam curabitur cociis.
+        include blocks/socials/socials.pug 
+        +socials()
+
   
