--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -45,3 +45,13 @@
     url('../fonts/material_icons/MaterialIcons-Regular.ttf') format('opentype'),
     url('../fonts/material_icons/MaterialIcons-Regular.svg') format('svg');
 }
+
+@font-face {
+  font-family: 'Font Awesome';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/fontawesome/fa-brands-400.woff2') format('woff2'),
+    url('../fonts/fontawesome/fa-brands-400.woff') format('woff'),
+    url('../fonts/fontawesome/fa-brands-400.ttf') format('opentype'),
+    url('../fonts/fontawesome/fa-regular-400.svg') format('svg');
+}
