--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,9 @@
 @import '../blocks/gallery/gallery.scss';
 @import '../blocks/image-card/image-card.scss';
 @import '../blocks/menu/menu.scss';
+@import '../blocks/light-footer/light-footer.scss';
+@import '../blocks/site-logo/site-logo.scss';
+@import '../blocks/socials/socials.scss';
 
 :root {
     box-sizing: border-box;
