added responsive to color & type page

--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -5,7 +5,7 @@
     line-height: 29px;
 
     &__box {
-        width: 70px;
+        min-width: 70px;
         height: 70px;
         border-radius: 6px;
 
