--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Index
+    meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     include blocks/checkbox/checkbox.pug
     include blocks/radio/radio.pug
