--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,7 +87,7 @@ h2 {
 h3 {
     font-family: 'Montserrat Bold';
     font-size: .75rem;
-    line-height: .8em;
+    line-height: 1.1em;
     color: $dark-shade-100;
     text-transform: uppercase;
 }
