--- a/src/index.pug
+++ b/src/index.pug
@@ -13,9 +13,45 @@ html
     include blocks/rating/rating.pug
     include blocks/configuration-dropdown/configuration-dropdown.pug
 
-    include blocks/menu/menu.pug 
-    +menu()
+    include blocks/header/header.pug 
+    +header()
 
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
     h1
       | This one is the sub-section or widget title
     h2
@@ -201,5 +237,8 @@ html
           .subscription
             .subscription__item
             input.text-field(placeholder="Your email address")
+
+    
+
 
   
