--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,9 +1,11 @@
+@import '../../scss/colors.scss';
+
 .button {
     display: inline-block;
     color: $white;
     background-image: $gradient;
     border-radius: 22px;
-    padding: 14px 20px;
+    padding: 8px 20px;
     text-transform: uppercase;
     font-size: .75rem;
     font-weight: bold;
