--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -1,9 +1,14 @@
+@import '../../scss/colors.scss';
+@import '../../scss/sizes.scss';
+
 .menu {
     display: none;
     flex-direction: column;
     color: $dark-shade-50;
     position: relative;
     border: 1px solid $dark-shade-50;
+    background-color: $white;
+    z-index: 100;
 
     &__item {
         text-align: center;
@@ -40,25 +45,6 @@
             line-height: 40px;
             top: 0;
             right: 10px;
-        }
-    }
-    
-
-    &__menu-toggle {
-        position: absolute;
-        top: 10px;
-        right: 40px;
-        border: none;
-        background-color: transparent;
-    
-        &:after {
-            position: absolute;
-            content: '\2261';
-            color: $dark-shade-50;
-            display: block;
-            font-size: 40px;
-            width: 40px;
-            height: 40px;
         }
     }
 
@@ -113,10 +99,6 @@
                 top: 10px;
                 right: 0;
             }
-        }
-
-        &__menu-toggle {
-            display: none;
         }
         
     }
