--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -1,9 +1,11 @@
+@import '../../scss/colors.scss';
+
 .rounded-button {
     display: inline-block;
     position: relative;
     color: $purple;
     border-radius: 22px;
-    padding: 8px 24px;
+    padding: 4px 18px;
     text-transform: uppercase;
     font-size: .75rem;
     line-height: 24px;
