--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,10 @@ html
     include blocks/header/header.pug 
     +header()
 
+    .hero
+      .hero__text
+        | Лучшие номера для вашей работы, отдыха и просто вдохновения
+
     br
     br
     br
