--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -42,6 +42,7 @@
 // @import '../blocks/footer/footer.scss';
 // @import '../blocks/header/header.scss';
 // @import '../blocks/menu-toggle/menu-toggle.scss';
+@import '../blocks/hero/hero.scss';
 
 :root {
     box-sizing: border-box;
