--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -1,8 +1,10 @@
+@import '../../scss/sizes.scss';
+
 .hero {
     position: relative;
     background-image: url('../../img/image_3.png');
     width: 100%;
-    min-height: 900px;
+    min-height: 200px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,8 +17,22 @@
         position: absolute;
         width: 297px;
         height: 48px;
-        text-align: right;
-        bottom: 18px;
-        right: 70px;
+        text-align: center;
+        bottom: 70%;
+        right: 20%;
     }
+}
+
+@media screen and (min-width: $small-size) {
+
+    .hero {
+        min-height: 900px;
+
+        &__text {
+            text-align: right;
+            bottom: 18px;
+            right: 70px;
+        }
+    }
+    
 }
