--- a/src/blocks/find-apartments-card/find-apartments-card.pug
+++ b/src/blocks/find-apartments-card/find-apartments-card.pug
@@ -3,7 +3,10 @@ mixin apartments()
         .card-canvas
           .find-apartments-card__content
             h1 Найдем номера под ваши пожелания
+            include ../range-dates/range-dates.pug
             +range-dates()
             .find-apartments-card__dropdown
+              include ../configuration-dropdown/configuration-dropdown.pug
               +dropdown({label: 'Гости', isFooter: true})
+            include ../long-button/long-button.pug
             +long-button('Подобрать номер')
