--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -7,5 +7,8 @@ html
     +header()
     include ../../blocks/hero/hero.pug
     +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
+    .landing.landing__room-config
+        include ../../blocks/find-apartments-card/find-apartments-card.pug 
+        +apartments()
     include ../../blocks/footer/footer.pug 
     +footer()
