bug fix with url()

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -10,7 +10,7 @@
     background-size: cover;
 
     &--img2 {
-        background-image: url('../../img/image_4.png');
+        background-image: url('../img/image_4.png');
     }
 
     &__text {
